--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Syne:wght@400;500&display=swap');
 
 body {
-    height: 100vh;
+    min-height: 100vh;
     margin: 0;
     display: flex;
 }
@@ -11,7 +11,7 @@ body {
     position: relative;
     max-width: 40vw;
     flex: 1 1 auto;
-    height: 100%;
+    height: 100vh;
 }
 
 img {
@@ -24,6 +24,9 @@ img {
     flex: 15 15 auto;
     font-family: "Syne Mono";
     font-size: 24px;
+    overflow-y: auto;
+    overflow-x: hidden;
+    height: 100vh;
 }
 
 .logo {
@@ -87,6 +90,8 @@ img {
 input {
     width: 220px;
     height: 22px;
+    border: 2px solid #E5E7EB;
+    display: block;
 }
 
 .create-section {
@@ -105,6 +110,10 @@ input {
     padding: 6px 12px;
 }
 
+.create-button:hover {
+    box-shadow: -3px 3px 3px #888;
+}
+
 .login-prompt {
     margin-top: 12px;
     font-size: 18px;
@@ -112,4 +121,18 @@ input {
 
 a {
     color: #596D48;
+}
+
+input[type="password"] {
+    position: relative;
+}
+
+input:invalid {
+    border: 2px solid rgb(255, 0, 0, 0.9);
+}
+
+input[type="password"]:invalid + span::before {
+    content: "* Passwords do not match";
+    color: red;
+    font-size: 14px;
 }
