--- a/style.css
+++ b/style.css
@@ -1,152 +1,152 @@
-@import url('https://fonts.googleapis.com/css2?family=Lobster&family=Syne+Mono&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Syne:wght@400;500&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Lobster&family=Syne+Mono&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Syne:wght@400;500&display=swap");
 
 body {
-    min-height: 100vh;
-    margin: 0;
-    display: flex;
+  min-height: 100vh;
+  margin: 0;
+  display: flex;
 }
 
 .img-container {
-    position: relative;
-    max-width: 40vw;
-    flex: 1 1 auto;
-    height: 100vh;
+  position: relative;
+  max-width: 40vw;
+  flex: 1 1 auto;
+  height: 100vh;
 }
 
 img {
-    height: 100%;
-    width: 100%;
+  height: 100%;
+  width: 100%;
 }
 
 .form-content {
-    min-width: 60vw;
-    flex: 15 15 auto;
-    font-family: "Syne Mono";
-    font-size: 24px;
-    overflow-y: auto;
-    overflow-x: hidden;
-    height: 100vh;
+  min-width: 60vw;
+  flex: 15 15 auto;
+  font-family: "Syne Mono";
+  font-size: 24px;
+  overflow-y: auto;
+  overflow-x: hidden;
+  height: 100vh;
 }
 
 .logo {
-    --height: 120px;
-    height: var(--height);
-    width: 100%;
-    position: absolute;
-    top: calc(50% - var(--height)/2);
-    background-color: rgb(0, 0, 0, 0.6);
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  --height: 120px;
+  height: var(--height);
+  width: 100%;
+  position: absolute;
+  top: calc(50% - var(--height) / 2);
+  background-color: rgb(0, 0, 0, 0.6);
+  display: flex;
+  align-items: center;
+  justify-content: center;
 
-    font-family: "Lobster", monospace;
-    font-size: 42px;
-    color: white;
+  font-family: "Lobster", monospace;
+  font-size: 42px;
+  color: white;
 }
 
 .sign-up-logo {
-    height: 90%;
-    width: 2.5em;
+  height: 90%;
+  width: 2.5em;
 }
 
 .text-content {
-    background-color: rgb(252, 231, 231, 0.3);
-    font-weight: 500;
-    padding: 42px;
+  background-color: rgb(252, 231, 231, 0.3);
+  font-weight: 500;
+  padding: 42px;
 }
 
 .bottom-text {
-    margin-top: 18px;
+  margin-top: 18px;
 }
 
 .main-form {
-    font-family: "Syne", monospace;
-    padding: 32px 42px;
-    display: flex;
-    flex-direction: column;
-    gap: 12px;
-    box-shadow: 0px 5px 5px #888;
+  font-family: "Syne", monospace;
+  padding: 32px 42px;
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+  box-shadow: 0px 5px 5px #888;
 }
 
 .form-header {
-    font-size: 32px;
-    font-weight: 700;
+  font-size: 32px;
+  font-weight: 700;
 }
 
 .main-form label {
-    display: block;
-    font-family: inherit;
-    font-size: 14px;
-    font-weight: 600;
-    margin: 0px;
+  display: block;
+  font-family: inherit;
+  font-size: 14px;
+  font-weight: 600;
+  margin: 0px;
 }
 
 .field {
-    display: flex;
-    gap: 64px;
+  display: flex;
+  gap: 64px;
 }
 
 input {
-    width: 220px;
-    height: 22px;
-    border: 2px solid #E5E7EB;
-    display: block;
+  width: min(220px, 200%);
+  height: 22px;
+  border: 2px solid #e5e7eb;
+  display: block;
 }
 
 .create-section {
-    margin-top: 24px;
-    padding: 0px 42px;
-    font-family: "Syne", monospace;
+  margin-top: 24px;
+  padding: 0px 42px;
+  font-family: "Syne", monospace;
 }
 
 .create-button {
-    background-color: #596D48;
-    font-size: 24px;
-    border: none;
-    border-radius: 4px;
-    color: white;
-    font-family: "Syne", monospace;
-    padding: 6px 12px;
+  background-color: #596d48;
+  font-size: 24px;
+  border: none;
+  border-radius: 4px;
+  color: white;
+  font-family: "Syne", monospace;
+  padding: 6px 12px;
 }
 
 .create-button:hover {
-    box-shadow: -3px 3px 3px #888;
+  box-shadow: -3px 3px 3px #888;
 }
 
 .login-prompt {
-    margin-top: 12px;
-    font-size: 18px;
+  margin-top: 12px;
+  font-size: 18px;
 }
 
 a {
-    color: #596D48;
+  color: #596d48;
 }
 
 input[type="password"] {
-    position: relative;
+  position: relative;
 }
 
 input:invalid {
-    border: 2px solid rgb(255, 0, 0, 0.9);
+  border: 2px solid rgb(255, 0, 0, 0.9);
 }
 
 input[type="password"]:invalid + span::before {
-    content: "* Passwords do not match";
-    color: red;
-    font-size: 14px;
+  content: "* Passwords do not match";
+  color: red;
+  font-size: 14px;
 }
 
 .credits {
-    font-size: 16px;
-    position: absolute;
-    bottom: 10px;
-    color: white;
-    text-align: center;
-    width: 100%;
-    font-family: "Syne", monospace;
+  font-size: 16px;
+  position: absolute;
+  bottom: 10px;
+  color: white;
+  text-align: center;
+  width: 100%;
+  font-family: "Syne", monospace;
 }
 
 .credits > a {
-    color: white;
+  color: white;
 }
